--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "joi": "^17.4.0",
     "mongoose": "^5.12.6"
