--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "dev": "nodemon -L src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "cross-env NODE_ENV=dev nodemon -L src/index.ts",
+    "test": "cross-env NODE_ENV=test jest --detectOpenHandles",
+    "test:watch": "npm run test -- --watch"
   },
   "repository": {
     "type": "git",
@@ -33,15 +34,22 @@
   },
   "homepage": "https://github.com/alienpr84/node-rest-api#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.14.0",
+    "@babel/preset-typescript": "^7.13.0",
     "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.23",
     "@types/joi": "^17.2.3",
     "@types/mongoose": "^5.10.5",
     "@types/nodemon": "^1.19.0",
+    "@types/supertest": "^2.0.11",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.7",
+    "supertest": "^6.1.3",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "joi": "^17.4.0",
