--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "cross-env NODE_ENV=dev nodemon -L src/index.ts",
-    "test": "cross-env NODE_ENV=test jest --detectOpenHandles",
+    "test": "cross-env NODE_ENV=test jest --detectOpenHandles --silent",
     "test:watch": "npm run test -- --watch"
   },
   "repository": {
@@ -36,7 +36,9 @@
   "devDependencies": {
     "@babel/preset-env": "^7.14.0",
     "@babel/preset-typescript": "^7.13.0",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/faker": "^5.5.3",
     "@types/jest": "^26.0.23",
     "@types/joi": "^17.2.3",
     "@types/mongoose": "^5.10.5",
@@ -49,9 +51,11 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "faker": "^5.5.3",
     "joi": "^17.4.0",
     "mongoose": "^5.12.6"
   }
